--- a/src/.config.cfg
+++ b/src/.config.cfg
@@ -1,12 +1,11 @@
 [DEFAULT]
 logfile = sd_logreader.log
+# default baudrate
 baud = 9600
+# connection timeout in seconds
+timeout = 6
 
 [Device1]
 port = /dev/ttyUSB0
 baud = 115200
-
-[Device2]
-port = /dev/ttyUSB1
-baud = 9600
 
